[project]
name = "waveshare-io"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "emgardner", email = "gardner.ethan10@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pymodbus[serial]>=3.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.8",
]
